# Project-Quaint

./: .gitignore  Quaint.code-workspace  cmake-kits.json
Engine/: CMakeLists.txt  Quaint.code-workspace
Engine/Source/: Main.cpp
Modules/Bolt/: CMakeLists.txt
Modules/Bolt/Include/: Bolt.h  BoltMemoryProvider.h  BoltRenderer.h  BridgeFunctions.h  ImguiHandler.h  RenderModule.h
Modules/Bolt/Include/Core/: Camera.h
Modules/Bolt/Include/GFX/: Helpers.h  ResourceBuilder.h  Window.h
Modules/Bolt/Include/GFX/Data/: LightData.h  MaterialData.h  PipelineInfo.h  RenderInfo.h  ResourceInfo.h  ShaderInfo.h
Modules/Bolt/Include/GFX/Entities/: Image.h  Light.h  Mesh.h  Model.h  Painters.h  Pipeline.h  RenderObject.h  RenderScene.h  Resources.h  ShaderGroup.h  Swapchain.h
Modules/Bolt/Include/GFX/Interface/: IEntityInterfaces.h  IRenderer.h  IShader.h  IShaderGroup.h  IWindow_Impl.h
Modules/Bolt/Include/GFX/Materials/: Material.h  PBRMaterial.h  SimpleMaterial.h
Modules/Bolt/Include/GFX/Texture/: BoltTexture.h
Modules/Bolt/Include/GFX/Vulkan/: VulkanHelpers.h  VulkanRenderer.h  VulkanResourceHelpers.h
Modules/Bolt/Include/GFX/Vulkan/Internal/: CommandManager.h  DeviceManager.h  PipelineManager.h  RenderFrame.h  RenderScene.h  ShaderInterface.h  ShaderManager.h  TextureManager.h  UnusedCodeDump.txt  VulkanFrameBuffer.h  VulkanGraphicsContext.h  VulkanPipeline.h  VulkanRenderObject.h  VulkanRenderPass.h  VulkanRenderScene.h  VulkanShader.h  VulkanShaderGroup.h
Modules/Bolt/Include/GFX/Vulkan/Internal/Entities/: Descriptor.h  UniformBuffer.h  VulkanPipeline.h  VulkanSwapchain.h  VulkanTexture.h
Modules/Bolt/Include/GFX/Vulkan/Internal/Resource/: VulkanResources.h
Modules/Bolt/Include/GFX/Vulkan/Internal/Texture/: VulkanTexture.h
Modules/Bolt/Source/: ImguiHandler.cpp  Main.cpp  RenderModule.cpp
Modules/Bolt/Source/Core/: Bolt.cpp  BoltRenderer.cpp  Camera.cpp
Modules/Bolt/Source/GFX/Entities/: Image.cpp  Light.cpp  Model.cpp  Painters.cpp  Pipeline.cpp  RenderObject.cpp  RenderScene.cpp
Modules/Bolt/Source/GFX/Materials/: Material.cpp  PBRMaterial.cpp  SimpleMaterial.cpp
Modules/Bolt/Source/GFX/Vulkan/: VulkanRenderer.cpp
Modules/Bolt/Source/GFX/Vulkan/Internal/: DeviceManager.cpp  RenderScene.cpp  ShaderInterface.cpp  ShaderManager.cpp  TextureManager.cpp  VulkanFrameBuffer.cpp  VulkanGraphicsContext.cpp  VulkanRenderObject.cpp  VulkanRenderPass.cpp  VulkanRenderScene.cpp  VulkanShader.cpp  VulkanShaderGroup.cpp
Modules/Bolt/Source/GFX/Vulkan/Internal/Entities/: Descriptor.cpp  UniformBuffer.cpp  VulkanPipeline.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp
Modules/Bolt/Source/GFX/Vulkan/Internal/Resource/: CombinedImageSamplerResource.cpp  ResourceBuilder.cpp  UniformBufferResource.cpp  VulkanResources.cpp
Modules/Bolt/Source/GFX/Vulkan/Internal/Texture/: VulkanTexture.cpp
Modules/Bolt/Source/GFX/Windows/: Window_Win.cpp
Modules/Bolt/Source/imgui/: imgui_impl_win32.cpp
Modules/Core/: CMakeLists.txt  CMakePresets.json
Modules/Core/IPC/: CMakeLists.txt
Modules/Core/IPC/Include/: IPCManager.h  IPCModule.h  SharedMemoryTypes.h
Modules/Core/IPC/Include/Mapper/: MemoryMapper_Win.h
Modules/Core/IPC/Source/: IPCManager.cpp  IPCModule.cpp  Main.cpp
Modules/Core/IPC/Source/Mapper/: MemoryMapper_Win.cpp
Modules/Core/Logger/: CMakeLists.txt
Modules/Core/Logger/Include/: LogEnums.h  LoggerModule.h  QuaintLogger.h  Utils.h
Modules/Core/Logger/Include/Private/: LoggerBase.h
Modules/Core/Logger/Source/: LoggerBase.cpp  LoggerModule.cpp  Main.cpp
Modules/Core/Logger/Source/Core/: Main.cpp
Modules/Core/Math/: CMakeLists.txt
Modules/Core/Math/Include/: QMath.h
Modules/Core/Math/Include/Math/: QMat.h  QMatrixUtils.h  QTransform.h  QVec.h  QVec.hpp
Modules/Core/Math/Source/: Main.cpp
Modules/Core/Math/Source/Math/: QMat_Default.cpp  QMat_SSE.cpp  QVec_Default.cpp  QVec_SSE.cpp
Modules/Core/Memory/: CMakeLists.txt
Modules/Core/Memory/Include/: MemoryConstants.h  MemoryContext.h  MemoryDefinitions.h  MemoryManager.h  MemoryModule.h
Modules/Core/Memory/Include/MemCore/: AllocationTechniqueFactory.h  GlobalMemoryOverrides.h  MemoryData.h
Modules/Core/Memory/Include/MemCore/Techniques/: BestFitPoolAllocTechnique.h  DefaultAllocTechnique.h  IAllocationTechnique.h
Modules/Core/Memory/Include/Tracker/: MemoryTrackerData.h
Modules/Core/Memory/Source/: Main.cpp  MemoryContext.cpp  MemoryDefinitions.cpp  MemoryManager.cpp  MemoryModule.cpp
Modules/Core/Memory/Source/MemCore/: AllocationTechniqueFactory.cpp  GlobalMemoryOverrides.cpp
Modules/Core/Memory/Source/MemCore/Techniques/: BestFitPoolAllocTechnique.cpp  DefaultAllocTechnique.cpp
Modules/Core/Types/: CMakeLists.txt
Modules/Core/Types/Include/: Module.h  Singleton.h
Modules/Core/Types/Include/Interface/: IMemoryContext.h
Modules/Core/Types/Include/Types/: Deleter.h  MemoryHelpers.h  QAllocator.h  QArray.h  QBaseTypes.h  QCTString.h  QFastArray.h  QFastDelegateBase.h  QFastDelegates.h  QHashTable.h  QHeap.h  QMap.h  QRBTree.h  QSet.h  QSharedPtr.h  QStaticString.h  QStaticString_W.h  QUniquePtr.h  QVector.h
Modules/Core/Types/Include/Types/Concurrency/: IQPlatformThread.h  QCondition.h  QCriticalSection.h  QThread.h
Modules/Core/Types/Include/Types/Concurrency/Interface/: IQPlatformCondition.h  IQPlatformCriticalSection.h  IQPlatformThread.h
Modules/Core/Types/Include/Types/Concurrency/Win/: QPlatformCondition_Win.h  QPlatformCriticalSection_Win.h  QThread_Win.h
Modules/Core/Types/Source/: Main.cpp  MainTemp.cpp  MemoryHelpers.cpp
Modules/Core/Types/Source/Types/Concurrency/: QCondition.cpp  QCriticalSection.cpp  QThread.cpp
Modules/Core/Types/Source/Types/Concurrency/Win/: QPlatformCondition_Win.cpp  QPlatformCriticalSection_Win.cpp  QThread_Win.cpp
Modules/Logger/: Main.cpp
Scripts/BuildTemplates/: Bolt.buildTmpl  Common.buildTmpl
Scripts/Logger/: AllocatorVisualizer.js
Shaders/TestTriangle/: brdfLUTCapture.frag  brdfLUTCapture.vert  cubemapCapture.frag  cubemapCapture.vert  envmapToCube.frag  irradianceCapture.frag  (+10 more)
Tools/: Quaint-Tools.code-workspace
(+47 files in other folders)
